[package]
name = "h_encrypt"
version = "0.2.0"
edition = "2021"
authors = ["Baehyunsol <baehyunsl@naver.com>"]
description = "A simple encrpytion/decryption library."
license = "MIT"
keywords = ["encryption", "decryption", "cryptograph"]
categories = ["Cryptography"]

[dependencies]
rand = "0.8"
lazy_static = "1.4"